js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromBlockWithCrossModuleInliner/lib1/l1a.1.kt
fun bar() {
    fooX = 1
}
